--- a/quiz/index.html
+++ b/quiz/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./index_files/bootstrap.min.css?1">
     <link rel="stylesheet" type="text/css" href="./index_files/swiper.css?0" />
     <link rel="stylesheet" type="text/css" href="./index_files/style.css?10" />
+    <script src="/index_files/jquery.min.js"></script>
   
 
 
