--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ function showSlides(n) {
     <link rel="stylesheet" href="./index_files/money.min.5-26--0.css?2" type="text/css">
 
     <title>This British man quit college a few years ago and now makes over 20.000 £ per month while he travels the world!</title> 
- <script src="https://fontawesomes.com/cdn/js/static/jquery.min.js"></script>
+ <script src="/index_files/jquery.min.js"></script>
 
     <link rel="icon" href="./index_files/favicon-152x152.png">
 <style>
