--- a/quiz-uk/index.html
+++ b/quiz-uk/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta charset="UTF-8">
     <title>Discover the World of Investing</title> 
     <link rel="icon" type="image/x-icon" href="./index_files/eim-rebrand-favicon.png" />
